--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -25,6 +25,11 @@
             Ingresar
           </ion-button>
         </form>
+        <div class="ion-text-center">
+          <ion-button fill="clear" color="tertiary" [routerLink]="['/recuperar']">
+            ¿Olvidaste tu contraseña? <strong>Recupérala aquí</strong>
+          </ion-button>
+        </div>
 
         <div class="ion-text-center">
           <ion-button fill="clear" color="tertiary" [routerLink]="['/registro']">
