--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -3,7 +3,9 @@
     <ion-buttons slot="start">
       <ion-back-button class="back-button" text="" defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title class="header-title">RegistrApp</ion-title>
+    <ion-title class="header-title ion-text-center">
+      <img src="assets/img/logo_duoc.png" alt="Logo" class="header-logo" />
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
