--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -35,27 +35,83 @@
         <ion-card-title>Bienvenido, {{ nombreUsuario }}!</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-grid>
-          <ion-row class="ion-justify-content-center ion-margin-bottom">
-            <ion-col size="auto">
-              <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode()">
-                <ion-icon slot="start" name="qr-code-outline"></ion-icon>
-                Generar código
-              </ion-button>
-              <button *ngIf="esAdmin" (click)="verAsistencias()">Ver Asistencias</button>
-              <div *ngIf="isLoading" class="loading-container">
-                <ion-spinner class="loading-spinner"></ion-spinner>
-                <p class="loading-message">Generando código, espere...</p>
-              </div>
-            </ion-col>
-            <ion-col size="auto">
-              <ion-button expand="block" fill="solid" color="secondary" (click)="scanQRCode()">
-                <ion-icon slot="start" name="camera-outline"></ion-icon>
-                Escanear QR
-              </ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
+
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Programación de apps móviles</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="auto">
+                  <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode(1)">
+                    <ion-icon slot="start" name="qr-code-outline"></ion-icon>
+                    Generar código
+                  </ion-button>
+                </ion-col>
+                <ion-col size="auto">
+                  <ion-button expand="block" fill="solid" color="secondary" (click)="scanQRCode(1)">
+                    <ion-icon slot="start" name="camera-outline"></ion-icon>
+                    Escanear QR
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Deep Learning</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="auto">
+                  <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode(2)">
+                    <ion-icon slot="start" name="qr-code-outline"></ion-icon>
+                    Generar código
+                  </ion-button>
+                </ion-col>
+                <ion-col size="auto">
+                  <ion-button expand="block" fill="solid" color="secondary" (click)="scanQRCode(2)">
+                    <ion-icon slot="start" name="camera-outline"></ion-icon>
+                    Escanear QR
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Proceso de portafolio 6</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="auto">
+                  <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode(3)">
+                    <ion-icon slot="start" name="qr-code-outline"></ion-icon>
+                    Generar código
+                  </ion-button>
+                </ion-col>
+                <ion-col size="auto">
+                  <ion-button expand="block" fill="solid" color="secondary" (click)="scanQRCode(3)">
+                    <ion-icon slot="start" name="camera-outline"></ion-icon>
+                    Escanear QR
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+
+        <ion-button *ngIf="esAdmin" expand="block" color="primary" (click)="verAsistencias()">
+          Ver Asistencias
+        </ion-button>
+
       </ion-card-content>
     </ion-card>
   </div>
@@ -79,4 +135,6 @@
       </ion-content>
     </ng-template>
   </ion-modal>
+
+  <ion-loading *ngIf="isLoading" message="Generando código QR..." spinner="crescent"></ion-loading>
 </ion-content>
