--- a/src/app/asistencia/asistencia.page.scss
+++ b/src/app/asistencia/asistencia.page.scss
@@ -89,3 +89,40 @@
 .logout:hover{
   background-color: darkred;
 }
+
+.asistencias-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+
+  th, td {
+    border: 1px solid #ccc;
+    text-align: left;
+    padding: 12px;
+  }
+
+  th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+
+  tr:hover {
+    background-color: #eaeaea;
+  }
+}
+
+.table-container {
+  max-height: 300px;
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: auto;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #fff;
+}
