--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -107,40 +107,6 @@
             </ion-grid>
           </ion-card-content>
         </ion-card>
-
-        <ion-card *ngIf="mostrarAsistencias && asistencias.length > 0">
-          <ion-card-header>
-            <ion-card-title>Asistencias Registradas</ion-card-title>
-            <ion-button slot="end" color="danger" size="small" (click)="cerrarTabla()">Cerrar</ion-button>
-          </ion-card-header>
-          <ion-card-content>
-            <div class="table-container">
-              <table class="asistencias-table">
-                <thead>
-                  <tr>
-                    <th>Usuario</th>
-                    <th>Asignatura</th>
-                    <th>Sección</th>
-                    <th>Sala</th>
-                    <th>Fecha</th>
-                    <th>Estado</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let asistencia of asistencias">
-                    <td>{{ asistencia.split(' - ')[0].split(': ')[1] }}</td>
-                    <td>{{ asistencia.split(' - ')[1] }}</td>
-                    <td>{{ asistencia.split(' - ')[2].split(': ')[1] }}</td>
-                    <td>{{ asistencia.split(' - ')[3].split(': ')[1] }}</td>
-                    <td>{{ asistencia.split(' - ')[4].split(': ')[1] }}</td>
-                    <td>{{ asistencia.split(' - ')[5] }}</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </ion-card-content>
-        </ion-card>
-
         <ion-button *ngIf="esAdmin" expand="block" color="primary" (click)="verAsistencias()">
           Ver Asistencias
         </ion-button>
@@ -168,6 +134,52 @@
       </ion-content>
     </ng-template>
   </ion-modal>
+
+  <ion-modal [isOpen]="isModalOpenTable" (ionModalDidDismiss)="isModalOpenTable = false">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Asistencias registradas</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="isModalOpenTable = false">
+            <ion-icon name="close"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <div class="table-container" *ngIf="asistencias.length > 0; else noAsistencias">
+        <table class="asistencias-table">
+          <thead>
+            <tr>
+              <th>Usuario</th>
+              <th>Asignatura</th>
+              <th>Sección</th>
+              <th>Sala</th>
+              <th>Fecha</th>
+              <th>Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let asistencia of asistencias">
+              <td>{{ asistencia.split(' - ')[0].split(': ')[1] }}</td>
+              <td>{{ asistencia.split(' - ')[1] }}</td>
+              <td>{{ asistencia.split(' - ')[2].split(': ')[1] }}</td>
+              <td>{{ asistencia.split(' - ')[3].split(': ')[1] }}</td>
+              <td>{{ asistencia.split(' - ')[4].split(': ')[1] }}</td>
+              <td>{{ asistencia.split(' - ')[5] }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <ng-template #noAsistencias>
+        <div class="no-asistencias">
+          <p>No hay asistencias registradas.</p>
+        </div>
+      </ng-template>
+    </ion-content>
+  </ion-modal>
+
 
   <ion-loading *ngIf="isLoading" message="Generando código QR..." spinner="crescent"></ion-loading>
 </ion-content>
