--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -38,6 +38,7 @@
         </ion-button>
       </ion-card-header>
       <ion-card-content>
+
         <ion-card>
           <ion-card-header>
             <ion-card-title>Programación de apps móviles</ion-card-title>
@@ -45,8 +46,8 @@
           <ion-card-content>
             <ion-grid>
               <ion-row>
-                <ion-col size="auto">
-                  <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode(1)">
+                <ion-col size="auto" *ngIf="esAdmin">
+                  <ion-button expand="block" fill="solid" color="tertiary" (click)="onGenerateCode(1)">
                     <ion-icon slot="start" name="qr-code-outline"></ion-icon>
                     Generar código
                   </ion-button>
@@ -69,8 +70,8 @@
           <ion-card-content>
             <ion-grid>
               <ion-row>
-                <ion-col size="auto">
-                  <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode(2)">
+                <ion-col size="auto" *ngIf="esAdmin">
+                  <ion-button expand="block" fill="solid" color="tertiary" (click)="onGenerateCode(2)">
                     <ion-icon slot="start" name="qr-code-outline"></ion-icon>
                     Generar código
                   </ion-button>
@@ -93,8 +94,8 @@
           <ion-card-content>
             <ion-grid>
               <ion-row>
-                <ion-col size="auto">
-                  <ion-button expand="block" fill="solid" color="tertiary" [disabled]="!esAdmin" (click)="onGenerateCode(3)">
+                <ion-col size="auto" *ngIf="esAdmin">
+                  <ion-button expand="block" fill="solid" color="tertiary" (click)="onGenerateCode(3)">
                     <ion-icon slot="start" name="qr-code-outline"></ion-icon>
                     Generar código
                   </ion-button>
@@ -178,7 +179,5 @@
       </ng-template>
     </ion-content>
   </ion-modal>
-
-
   <ion-loading *ngIf="isLoading" message="Generando código QR..." spinner="crescent"></ion-loading>
 </ion-content>
